tests/run-pass/semck/use-arg.rs
fn foo(bar: int) -> int {
    bar + 2
}

fn main() {}