tests/compile-fail/typeck/missing-return.rs
//! ERROR(2:17): missing return value/return statement
fn foo() -> int {
}

fn main() {}